Mobile dark mode fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -88,3 +88,7 @@ figcaption {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+.hide-icon {
+    display: none;
+}
